# llm-platform

./: main.py  pyproject.toml
gateway/app/: main.py
gateway/app/api/: chat.py  health.py
gateway/app/core/: logging.py  settings.py
gateway/app/schemas/: chat.py
gateway/app/services/: llm_client.py
gateway/tests/integration/: test_chat_basic.py
