[project]
name = "llm-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.4",
    "prometheus-client>=0.23.1",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.2.1",
    "redis>=7.0.1",
    "ruff>=0.14.3",
    "uvicorn[standard]>=0.38.0",
]
